Add Json.NET reference

--- a/Incognitum/Incognitum.csproj
+++ b/Incognitum/Incognitum.csproj
@@ -15,4 +15,8 @@
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+  </ItemGroup>
+
 </Project>
