Write HttpsConnection ctor

--- a/Incognitum/Incognitum.csproj
+++ b/Incognitum/Incognitum.csproj
@@ -19,4 +19,12 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="API\" />
+  </ItemGroup>
+  
+  <!-- <PropertyGroup> -->
+    <!-- <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects> -->
+    <!-- <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType> -->
+  <!-- </PropertyGroup> -->
 </Project>
